--- a/taskColl01Xiaowei/demo02/index.html
+++ b/taskColl01Xiaowei/demo02/index.html
@@ -4,6 +4,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>html</title>
+		<link rel="stylesheet" href="../assets/css/reset.css">
 		<link rel="stylesheet" href="css/index.css" />
 
 	</head>
