--- a/taskColl01Xiaowei/demo03/index.html
+++ b/taskColl01Xiaowei/demo03/index.html
@@ -12,13 +12,20 @@
 			<img src="img/logo.png" alt="">
 			<h1>团队名称</h1>
 		</div>
+		
+		<div class="team_member_cont">
+			<img src="img/logo.png" alt="">
+			<img src="img/logo.png" alt="">
+			<img src="img/logo.png" alt="">
+			<img src="img/logo.png" alt="">
+		</div>
 		<div class="team_intro_cont">
 			<article>
-				<header>
-				<h2>关于团队标题</h2>	
+				<header class="dialog">
+					<h2>关于团队标题</h2>	
 				</header>
-				<section>
-					<p>解释一下吧。<br>
+				<section class="dialog">
+					<p class="explain">解释一下吧。<br>
 						(hello kitty)
 					</p>
 					<p>
@@ -28,7 +35,7 @@
 					</p>
 				</section>
 
-				<section>
+				<section class="dialog">
 					<header>概述</header>
 					<p>
 						我又是一大段我又是一大段我又是一大段我又是一大段我又是一大段我又是一大段我又是一大段我又是一大段我又是一大段我又是一大段我又是一大段我又是一大段我又是一大段我又是一大段我又是一大段我又是一大段
@@ -37,7 +44,6 @@
 
 			</article>
 		</div>
-		<div class="team_member_cont"></div>
 	</div>
 </body>
 </html>
