--- a/taskColl01Xiaowei/demo06/index.html
+++ b/taskColl01Xiaowei/demo06/index.html
@@ -12,5 +12,19 @@
 		<h1><a href="#">ife.baidu.com</a></h1>
 		<span>2016.03</span>
 	</header>
+	<div id="banner_cont" class="main_cont">
+		<div id="sidebar">
+			<h2 class="caption">About Technologe</h2>
+			
+			
+			<p>about technologe about technologe about technologe</p>
+		</div>
+		<div id="banner">
+			<img src="img/banner/01.jpg" alt="">
+			<div class="glass item1"></div>
+			<div class="glass item2"></div>
+		</div>
+		
+	</div>
 </body>
 </html>
