--- a/taskColl01Xiaowei/demo06/index.html
+++ b/taskColl01Xiaowei/demo06/index.html
@@ -15,9 +15,15 @@
 	<div id="banner_cont" class="main_cont">
 		<div id="sidebar">
 			<h2 class="caption">About Technologe</h2>
-			
-			
-			<p>about technologe about technologe about technologe</p>
+			<p>About technologe about technologe about technologe</p>
+			<strong class="num">700</strong>
+			<div class="footer">
+				<h3>3.2</h3>				
+				<div>
+					<span>css</span>
+					<p>csscsscsscsscsscss</p>
+				</div>
+			</div>
 		</div>
 		<div id="banner">
 			<img src="img/banner/01.jpg" alt="">
@@ -26,5 +32,50 @@
 		</div>
 		
 	</div>
+
+	<div id="article_cont" class="main_cont">
+		<article class="item item1">
+			<h4>标题</h4>
+			<p>端前端前端端前端前端前端前端前端前端前
+端前端前端前端前端前端前端前端端前端前
+端端前端前端前端前端前端前端前端前端前
+端前端前端前端前端前端端前端前端端前端
+前端前端前端前端前端前端前端前端前端前
+端前端前端前端端前端前端端前端前端前端
+前端前端前端前端前端前端前端前端前端前
+端前端端前端前端前端前端前端前端前端前
+端前端端前端前端</p>
+		</article>
+		<article class="item item2">
+			<h4>标题</h4>
+			<p>
+				端前端前端端前端前端前端前端前端前端前
+				端前端前端前端前端前端前端前端端前端前
+				端端前端前端前端前端前端前端前端前端前
+				端前端前端前端前端前端端前端前端端前端
+				前端前端前端前端前端前端前端前端前端前
+				端前端前端前端端前端前端端前端前端前端
+				前端前端前端前端前端前端前端前端前端前
+				端前端端前端前端前端前端前端前端前端前
+				端前端端前端前端
+			</p>
+		</article>
+		<div class="item">
+			<article class=" item3">
+				<h4>How</h4>
+				<p>
+					前端前端端前端前端
+					前端前端前端前端前端前
+					端前端前端端前
+				</p>
+			</article>
+			<ul>
+				<li>What------<span>010%</span></li>
+				<li>What------<span>020%</span></li>
+				<li>What------<span>030%</span></li>
+			</ul>
+		</div>
+	</div>
+
 </body>
 </html>
