--- a/taskColl01Xiaowei/demo06/index.html
+++ b/taskColl01Xiaowei/demo06/index.html
@@ -75,6 +75,40 @@
 			</ul>
 		</div>
 	</div>
+	<div id="content" class="main_cont">
+		<div class="news_main_cont">
+			<div class="news_banner">
+				<img src="./img/news_banner.jpg" alt="">
+				<div class="info">
+					<h3>前端技术</h3>
+					<span>前端技术前端技术</span>
+				</div>
+			</div>
+			<div class="news">
+				<ul>
+					<li>前端前端前端前端前端前端 ....................</li>
+					<li>前端前端前端前端前端前端 ....................</li>
+					<li>前端前端前端前端前端前端 ....................</li>
+				</ul>
+				<div class="logo_cont">
+					<div class="num">0</div>
+					<div class="sidebar">
+						<em>one two <br> three four five</em>
+						<span>hello world hello world hello world</span>
+					</div>
+				</div>
+				<p><span>“</span>world hello world
+					hello world hello world
+					hello world hello world
+					hello world hello world
+					hello world hello world
+					hello world  <span class="last">”</span></p>
+			</div>
+		</div>
+		<div class="news_cont">
 
+		</div>
+
+	</div>
 </body>
 </html>
