--- a/taskColl01Xiaowei/demo06/index.html
+++ b/taskColl01Xiaowei/demo06/index.html
@@ -106,9 +106,22 @@
 			</div>
 		</div>
 		<div class="news_cont">
+			<div class="title_cont"><h2><em>THE</em> TECHNOLOGE
+				OF FRONT</h2>
+				<h2 class="chinese">前端技术学院</h2>
+			</div>
+			<div class="content">
+				<p><span>前</span>前端前端前端前端端前端前端前端端前端前端前端前端前端前端端前端前端前端前端前端前端前端前端前端前端前端端前端前端前端前端前端前端端前端前端前端前端前端前端前端前端前端前端前端端前端前端前端前端前端前端端前端前端前端前端前端前端前端前端前端前端前端端前端前端前端前端前端前端端前端前端前端前端前端前端前端端前端前端前端前端前端前端前端端前端前端前端前端前端前端前端端前端前端前端前端前端前端前端前前端前端前端前前端前端前端前端前端前端前端前前端前端前端前端前端前端前端前前端前端前端前端前端前端前端前前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端</p>
+				<img src="./img/news_content.jpg" alt="">
+				<p>前端前端前端端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端端前端前端前端前端前端前端端前端前端前端前端前端前端端前端前端前端前端前端前端端前端前端前端前端前端前端前端前端前端前端前端端前端前端前端前端前端前端端前端前端前端前端前端前端前端前端前端前端前端端前端前端前端前端前端前端端前端前端前端前端前端前端前端前端前端前端前端端前端前端前端前端前端前端端前端前端前端前端前端前端前端前端前端前端前端端前端前端前端前端前端前端端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端</p>
+				<p>前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端</p>
+			</div>
 
 		</div>
 
+	</div>
+	<div id="footer" class="main_cont">
+		<span>ife前端</span>
 	</div>
 </body>
 </html>
